--- a/pom.xml
+++ b/pom.xml
@@ -101,9 +101,9 @@
 
         <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
         <dependency>
-            <groupId>hsqldb</groupId>
+            <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>1.8.0.10</version>
+            <version>2.7.2</version>
         </dependency>
 
         <dependency>
